<?xml version="1.0"?>
<package>
  <name>rosbridge_push</name>
  <version>0.0.1</version>
  <description>A WebSocket client that pushes ROS data to a server.</description>

  <license>BSD</license>

  <author email="jrokisky@mindgrub.com">Justin Rokisky</author>
  <maintainer email="jrokisky@mindgrub.com">Justin Rokisky</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rosbridge_library</run_depend>
  <run_depend>python-websocket</run_depend>
  <run_depend>rosapi</run_depend>
  <run_depend>rospy</run_depend>
</package>
